--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ streamlit==1.28.0
 pandas==2.1.0
 numpy==1.27.0
 scikit-learn==1.3.2
-joblib==1.3.2
+joblib==1.3.2streamlit
+pandas
+scikit-learn
+matplotlib
+joblib
