--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-streamlit==1.28.0
-pandas==2.1.0
-numpy==1.27.0
-scikit-learn==1.3.2
-joblib==1.3.2streamlit
-pandas
-scikit-learn
-matplotlib
-joblib
+streamlit==1.38.0
+pandas==2.2.2
+scikit-learn==1.5.0
+matplotlib==3.9.1
+joblib==1.4.2
