--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-scikit-learn
-matplotlib
-joblib
+streamlit==1.28.0
+pandas==2.1.4
+scikit-learn==1.3.2
+matplotlib==3.8.2
+joblib==1.3.2
