--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.28.0
-pandas==2.1.4
-scikit-learn==1.3.2
-matplotlib==3.8.2
-joblib==1.3.2
+numpy==2.1.2
+pandas==2.2.3
+scikit-learn==1.5.2
+streamlit==1.37.0
+joblib==1.4.2
