--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ scikit-learn==1.5.2
 streamlit==1.37.0
 joblib==1.4.2
 matplotlib==3.9.2
+seaborn==0.13.2
+lime==0.2.0.1
+google-generativeai==0.7.2
+xgboost==2.1.1
+reportlab==4.2.2
+openpyxl==3.1.5
+plotly==5.24.1
+python-docx==1.1.2
